# CodeFix-Arena

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
env/: actions.py  coding_env.py  grader.py  models.py  runtime_debugger.py  workspace.py
projects/task1_easy_debug/: main.py
projects/task2_medium_refactor/: app.py
projects/task3_hard_java_refactor/: CalculatorService.java  Main.java  ResultFormatter.java
server/: app.py
tasks/: coding_tasks.py  debug_tasks.py
