[project]
name = "codefix-arena"
version = "0.1.0"
description = "OpenEnv coding assistant environment"
requires-python = ">=3.11"
authors = [
    { name = "Raj Borade" }
]
dependencies = [
    "openenv-core",
    "openai",
    "fastapi",
    "uvicorn",
    "pydantic",
    "gradio",
    "python-dotenv"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server*", "env*", "tasks*"]
